--- a/client-app/package.json
+++ b/client-app/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.1.2",
+    "@types/cropperjs": "^1.1.5",
     "@types/jest": "^24.0.23",
     "@types/node": "^12.12.18",
     "@types/react": "^16.9.16",
+    "@types/react-cropper": "^0.10.7",
     "@types/react-dom": "^16.9.4",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-widgets": "^4.4.0",
@@ -20,7 +22,9 @@
     "mobx": "^5.15.1",
     "mobx-react-lite": "^1.5.2",
     "react": "^16.12.0",
+    "react-cropper": "^1.2.0",
     "react-dom": "^16.12.0",
+    "react-dropzone": "^10.2.1",
     "react-final-form": "^6.3.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
