--- a/client-app/package.json
+++ b/client-app/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^16.9.16",
     "@types/react-cropper": "^0.10.7",
     "@types/react-dom": "^16.9.4",
+    "@types/react-infinite-scroller": "^1.2.1",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-widgets": "^4.4.0",
     "@types/revalidate": "^1.1.2",
@@ -27,6 +28,7 @@
     "react-dom": "^16.12.0",
     "react-dropzone": "^10.2.1",
     "react-final-form": "^6.3.3",
+    "react-infinite-scroller": "^1.2.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-toastify": "^5.4.1",
