--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data source=Reactivities.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
